Fixs word wrap nodes

--- a/src/renderer/features/workbench/components/FileTree/FileTree.scss
+++ b/src/renderer/features/workbench/components/FileTree/FileTree.scss
@@ -39,8 +39,12 @@
       width: 100%;
       position: absolute;
 
-      > div {
+      > span {
         padding-left: 25px;
+        overflow: visible;
+        display: flex;
+        word-break: break-all;
+        white-space: nowrap;
       }
     }
 
